--- a/lib/cli.html
+++ b/lib/cli.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><title>lib/cli</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content="../"><meta name="citare-document-path" content="lib/cli"><meta name="citare-project-path" content="lib/cli.coffee"><link rel="stylesheet" type="text/css" media="all" href="../assets/style.css"><script type="text/javascript" src="../assets/behavior.js"></script><body><div id="bg"></div><div id="meta"><div class="file-path">lib/cli.coffee</div></div><div id="document"><div class="segment"><div class="comments"><div class="wrapper"><h1 id="command-line-interface">Command Line Interface</h1></div></div><div class="code"><div class="wrapper">childProcess = require <span class="string">'child_process'</span>
+<!DOCTYPE html><html lang="en"><head><title>lib/cli</title></head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"><meta name="citare-relative-root" content="../"><meta name="citare-document-path" content="lib/cli"><meta name="citare-project-path" content="lib/cli.coffee"><meta name="citare-github-url" content="https://github.com/druide/citare-scriptum"><link rel="stylesheet" type="text/css" media="all" href="../assets/style.css"><script type="text/javascript" src="../assets/behavior.js"></script><body><div id="bg"></div><div id="meta"><div class="file-path"><a href="https://github.com/druide/citare-scriptum/blob/master/lib/cli.coffee">lib/cli.coffee</a></div></div><div id="document"><div class="segment"><div class="comments"><div class="wrapper"><h1 id="command-line-interface">Command Line Interface</h1></div></div><div class="code"><div class="wrapper">childProcess = require <span class="string">'child_process'</span>
 fs           = require <span class="string">'fs'</span>
 path         = require <span class="string">'path'</span>
 
@@ -14,8 +14,8 @@ Utils        = require <span class="string">'./utils'</span>
 marked       = require <span class="string">'marked'</span>
 hljs         = require(<span class="string">'highlight.js'</span>)</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>Readable command line output is just as important as readable documentation!  It is the first
 interaction that a developer will have with a tool like this, so we want to leave a good
-impression with nicely formatted and readable command line output.</p></div></div><div class="code"><div class="wrapper">module.exports = <span class="function"><span class="title">CLI</span></span> = (inputArgs, callback) -&gt;</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>In keeping with our console beautification project, make sure that our output isn&#39;t getting
-too comfortable with the user&#39;s next shell line.</p></div></div><div class="code"><div class="wrapper">  actualCallback = callback
+impression with nicely formatted and readable command line output.</p></div></div><div class="code"><div class="wrapper">module.exports = <span class="function"><span class="title">CLI</span></span> = (inputArgs, callback) -&gt;</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>In keeping with our console beautification project, make sure that our output isn‘t getting
+too comfortable with the user’s next shell line.</p></div></div><div class="code"><div class="wrapper">  actualCallback = callback
   <span class="function"><span class="title">callback</span></span> = (args...) -&gt;
     console.log <span class="string">''</span>
 
@@ -155,16 +155,19 @@ charge of kicking that off.</p></div></div><div class="code"><div class="wrapper
   project.options.footer = argv[<span class="string">'footer'</span>] || <span class="string">''</span></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>configure marked</p></div></div><div class="code"><div class="wrapper">  marked.setOptions
     gfm: project.options.gfm,
     tables: <span class="literal">true</span>,
-    breaks: <span class="literal">true</span>,
+    breaks: project.options.gfm,
     pedantic: <span class="literal">false</span>,
-    sanitize: <span class="literal">true</span>,
+    sanitize: <span class="literal">false</span>,
     smartLists: <span class="literal">true</span>,
+    smartypants: <span class="literal">true</span>,
     langPrefix: <span class="string">''</span>,
     highlight: (code, lang) =&gt;
-      <span class="keyword">if</span> !lang?
-        code
-      <span class="keyword">else</span> <span class="keyword">if</span> lang == <span class="string">'js'</span>
-        hljs.highlight(<span class="string">"javascript"</span>, code).value
+      <span class="keyword">if</span> lang == <span class="string">'js'</span>
+        lang = <span class="string">'javascript'</span>
+      <span class="keyword">if</span> !lang? <span class="keyword">or</span> !hljs.LANGUAGES[lang]?</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>automatically highlight brief definitions</p></div></div><div class="code"><div class="wrapper">        <span class="keyword">if</span> code.match(<span class="regexp">///[^\(]+\(///</span>)
+          hljs.highlight(<span class="string">"brief"</span>, code).value
+        <span class="keyword">else</span>
+          code
       <span class="keyword">else</span>
         hljs.highlight(lang, code).value</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>We expand the <code>--glob</code> expressions into a poor-man&#39;s set, so that we can easily remove
 exclusions defined by <code>--except</code> before we add the result to the project&#39;s file list.</p></div></div><div class="code"><div class="wrapper">  files = {}
@@ -175,12 +178,13 @@ exclusions defined by <code>--except</code> before we add the result to the proj
     <span class="keyword">delete</span> files[file] <span class="keyword">for</span> file <span class="keyword">in</span> glob.sync globExpression</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>There are several properties that we need to configure on a project before we can go ahead and
 generate its documentation.</p></div></div><div class="code"><div class="wrapper">  project.index = argv.index
   project.files = (f <span class="keyword">for</span> f <span class="keyword">of</span> files)
-  project.stripPrefixes = argv.strip</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p><code>Project#generate</code> can take some options, such as which style to use.  Since we&#39;re generating
-differently depending on whether or not github is enabled, let&#39;s set those up now:</p></div></div><div class="code"><div class="wrapper">  options =
+  project.stripPrefixes = argv.strip</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p><code>Project#generate</code> can take some options, such as which style to use.  Since we‘re generating
+differently depending on whether or not github is enabled, let’s set those up now:</p></div></div><div class="code"><div class="wrapper">  options =
     style: styles[argv.style]</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>Good to go!</p></div></div><div class="code"><div class="wrapper">  <span class="keyword">unless</span> argv.github
+    project.githubURL = argv[<span class="string">'repository-url'</span>] <span class="keyword">if</span> argv[<span class="string">'repository-url'</span>]?
     project.generate options, (error) -&gt;
-      callback error</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><h2 id="github">GitHub</h2></div></div><div class="code"><div class="wrapper">  <span class="keyword">else</span></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>We want to be able to annotate generated documentation with the project&#39;s GitHub URL.  This is
-handy for things like generating links directly to each file&#39;s source.</p></div></div><div class="code"><div class="wrapper">    CLIHelpers.guessPrimaryGitHubURL argv[<span class="string">'repository-url'</span>], (error, url, remote) -&gt;
+      callback error</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><h2 id="github">GitHub</h2></div></div><div class="code"><div class="wrapper">  <span class="keyword">else</span></div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>We want to be able to annotate generated documentation with the project‘s GitHub URL.  This is
+handy for things like generating links directly to each file’s source.</p></div></div><div class="code"><div class="wrapper">    CLIHelpers.guessPrimaryGitHubURL argv[<span class="string">'repository-url'</span>], (error, url, remote) -&gt;
       console.log <span class="string">"publish_to_github"</span>, error, url, remote
 
       <span class="keyword">if</span> error
