--- a/lib/styles/callout/style.html
+++ b/lib/styles/callout/style.html
@@ -386,11 +386,11 @@ em, i
         max-width 99%
         overflow auto
         line-height 1.4em
-        &amp;.brief
+        &amp;.brief, &amp; span.brief
           white-space normal
     blockquote
       border-left 4px solid silver
-      margin-left 0
+      margin 1em 0
       padding 2px 14px
       background #F5F5F5
     p
@@ -441,6 +441,9 @@ em, i
     <span class="tag">color</span> <span class="tag">transparent</span>
     <span class="tag">text</span>-<span class="tag">shadow</span> 0 0 15<span class="tag">px</span> <span class="id">#cbcbcb</span>
     <span class="tag">z</span>-<span class="tag">index</span>: 997
+
+  <span class="tag">a</span>
+    <span class="tag">word</span>-<span class="tag">wrap</span> <span class="tag">break</span>-<span class="tag">word</span>
 
 <span class="class">.segment</span><span class="class">.commentsonly</span><span class="pseudo">:after</span>
   <span class="tag">content</span> ""
