--- a/lib/cli.html
+++ b/lib/cli.html
@@ -165,7 +165,7 @@ charge of kicking that off.</p></div></div><div class="code"><div class="wrapper
       <span class="keyword">if</span> lang == <span class="string">'js'</span>
         lang = <span class="string">'javascript'</span>
       <span class="keyword">if</span> !lang? <span class="keyword">or</span> !hljs.LANGUAGES[lang]?</div></div></div><div class="segment"><div class="comments"><div class="wrapper"><p>automatically highlight brief definitions</p></div></div><div class="code"><div class="wrapper">        <span class="keyword">if</span> code.match(<span class="regexp">///[^\(]+\(///</span>)
-          hljs.highlight(<span class="string">"brief"</span>, code).value
+          <span class="string">'&lt;span class="brief"&gt;'</span> + hljs.highlight(<span class="string">"brief"</span>, code).value + <span class="string">"&lt;/span&gt;"</span>
         <span class="keyword">else</span>
           code
       <span class="keyword">else</span>
