--- a/lib/styles/default/style.html
+++ b/lib/styles/default/style.html
@@ -407,11 +407,11 @@ em, i
         max-width 99%
         overflow auto
         line-height 1.4em
-        &amp;.brief
+        &amp;.brief, &amp; span.brief
           white-space normal
     blockquote
       border-left 4px solid silver
-      margin-left 0
+      margin 1em 0
       padding 2px 14px
       background #F5F5F5
     p
@@ -438,6 +438,9 @@ em, i
     .wrapper
       display inline-block
       margin-right 1em
+
+  a
+    word-wrap break-word
 
 .segment, #segment-footer
   position relative
